# CI_CD

./: .pre-commit-config.yaml  Makefile  calc.py  main.py  pyproject.toml  test_calc.py
.github/workflows/: ci.yml
